# only_ipv6

./: Cargo.toml  old_server.py  server.py  wg.conf
src/: encryption_module.rs  get_ipv6.rs  main.rs  receiver.rs  sender.rs  test_receiver.rs  test_sender.rs
