[package]
name = "radmin_clone"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
bincode = "1.3"
crc16 = "0.4.0"
stunclient = "0.4"
rsa ="0.9"
pkcs8 = "0.9"
pem = "1.0"

# Encryption
aes-gcm = "0.10"
rand = "0.8"

# File handling
rfd = "0.11"  # For file dialogs

# WebSocket
url = "2.0"
tungstenite = "0.20"

# Async synchronization
async-mutex = "1.0"  # Alternative to tokio::sync::Mutex if needed

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "sender"
path = "src/sender.rs"

[[bin]]
name = "receiver"
path = "src/receiver.rs"

[[bin]]
name = "encryption_module"
path = "src/encryption_module.rs"

[[bin]]
name = "get_ipv6"
path = "src/get_ipv6.rs"